# codedupes

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: analysis-defaults.md  cli.md  hybrid-tuning.md  index.md  install.md  model-profiles.md  output.md  python-api.md  usage.md
scratch/: pytest.ini
scripts/: sweep_common.py  sweep_hybrid_gates.py  sweep_semantic_thresholds.py
src/codedupes/: __init__.py  __main__.py  analyzer.py  cli.py  constants.py  extractor.py  models.py  pairs.py  semantic.py  semantic_profiles.py  traditional.py
test_fixtures/: sample.py
test_fixtures/hybrid_tuning/: README.md  labels.json  semantic_threshold_report.json
test_fixtures/hybrid_tuning/crab_visibility/crab_visibility/: __init__.py  geometry.py  planner.py  predict.py  reporting.py  sidereal.py  windowing.py
test_fixtures/hybrid_tuning/crab_visibility/scripts/: legacy_report.py  nightly_batch.py  planner_alt.py  predict_cli.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_cli.py  test_docs_examples.py  test_extractor.py  test_integration.py  test_semantic.py  test_semantic_profiles.py  test_semantic_smoke.py  test_traditional.py
tests/fixtures/: empty.py  sample.py  single_func.py  syntax_error.py
