[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codedupes"
version = "0.2.0"
description = "Detect duplicate/unused Python code via AST analysis and semantic embeddings (C2LLM)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "sentence-transformers>=3.0.0",
    "transformers>=4.37.0",
    "torch>=2.5.0",
    "numpy>=1.24.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
gpu = ["deepspeed"]

[project.scripts]
codedupes = "codedupes.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/codedupes"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["tests/fixtures/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
