[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "codedupes"
dynamic = ["version"]
description = "Detect duplicate/unused Python code via AST analysis and semantic embeddings (C2LLM)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "sentence-transformers>=5,<6",
    "transformers>=4.51,<5",
    "torch>=2.5.0",
    "numpy>=1.24.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
gpu = ["deepspeed"]

[project.urls]
Homepage = "https://github.com/pszemraj/codedupes.git"
Repository = "https://github.com/pszemraj/codedupes.git"

[project.scripts]
codedupes = "codedupes.cli:main"

[tool.hatch.build]
dev-mode-dirs = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/codedupes"]

[tool.hatch.build.targets.sdist]
include = [
    "src/codedupes",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/codedupes/_version.py"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["tests/fixtures/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
markers = [
    "network: tests that download remote model assets",
    "gpu: tests that require CUDA and GPU execution",
]
